--- a/page1.html
+++ b/page1.html
@@ -1,2 +1,13 @@
-<html><body>you are page 1
-</body></html>
+<html>
+	<head>
+		<link rel="stylesheet" href="css_page1.css">
+	</head>
+	<body>
+		<hr>
+		you are page 1
+		<hr>
+		<p>ok test for testing git and github</p>
+		<u>this tag used for underline test</u>
+
+	</body>
+</html>
