--- a/page2.html
+++ b/page2.html
@@ -1,2 +1,8 @@
-<html><body>you are page two
-</body></html>
+<html>
+  <head>
+    PAGE TWO...
+  </head>
+  <body>
+    you are page two
+  </body>
+</html>
